# grocery-shopping

./: .gitignore  README.md  README.rst  ai.py  config.py  frisco.py  frisco_assistent_setup.py  main.py  notion.py  notion_logging.py  pyproject.toml  samconfig.toml  template.yaml  todoist.py
.github/workflows/: ci-cd.yml
grocery_shopping/: ai.py  config.py  frisco.py  frisco_assistent_setup.py  groceries.py  logging.py  meal_planing.py  notifications.py  notion.py  notion_logging.py  shopping.py  todoist.py
tests/: test_grocery_shopping.py  test_shopping.py
