[tool.poetry]
name = "grocery-shopping"
version = "0.1.0"
description = ""
authors = ["Ewelina Dziedzic <ewelina.dziedzic@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
openai = "^1.52.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
