[tool.poetry]
name = "grocery-shopping"
version = "0.1.0"
description = ""
authors = ["Ewelina Dziedzic <ewelina.dziedzic@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.31.0"
openai = "^1.52.0"
pytz = "^2024.2"
boto3 = "^1.35.54"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
black = "^24.10.0"
mypy = "^1.14.1"
types-requests = "^2.32.0.20241016"
types-pytz = "^2024.2.0.20241221"
types-boto3 = "^1.36.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
